cmake_minimum_required(VERSION 4.3.1)
project(bai_yu_agent VERSION 1.0 LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(LINUX)
    message("Cur system is LINUX")
elseif(WIN32)
    message("Cur system is Windows")
else()
    message("-------Cur system isn't supported!-------")
endif()
# here library options!
set(isOpenAgent ON)
if(isOpenAgent)
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/LLM")
endif()
add_executable(${PROJECT_NAME} main.cpp)
if(isOpenAgent)
    target_link_libraries(${PROJECT_NAME} PRIVATE baiyu::llm) 
    target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/LLM)
endif()